<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chess Clock</string>
    <string name="optionsmenu_preferences">Settings</string>
    <string name="optionsmenu_about">About</string>

    <string name="reset_button">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="unknown">Unknown</string>
    <string name="version">version</string>
    <string name="reset">Reset</string>
    <string name="really_reset">Reset game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stats">Stats</string>
    <string name="pauseoff_button">Pause</string>
    <string name="pauseon_button">Resume</string>
    <string name="start_button">Start</string>

    <string name="time_preference_description">Time Preferences</string>
    <string name="basic_time_preference_description">Simple</string>
    <string name="adjust_basic_time_preference_description">Adjust Settings</string>

    <string name="basic_screen_enabled_summary">Set basic time control options.</string>
    <string name="advanced_screen_enabled_summary">Set advanced time control options.</string>

    <string name="initial_minutes_preference">Initial Minutes</string>
    <string name="summary_initial_minutes_preference">Set number of minutes</string>
    <string name="dialog_title_initial_minutes_preference">Please enter number of minutes</string>

    <string name="initial_seconds_preference">Initial Seconds</string>
    <string name="summary_initial_seconds_preference">Set number of seconds</string>
    <string name="dialog_title_initial_seconds_preference">Please enter number of seconds</string>

    <string name="increment_preference">Bonus Seconds Per Move</string>
    <string name="summary_increment_preference">Set per-move increment (in seconds)</string>
    <string name="dialog_title_increment_preference">Please enter number of seconds</string>

    <string name="delay_type_preference">Delay Type</string>
    <string name="summary_delay_type_preference">Set how bonus time will be applied.</string>

    <string-array name="delay_type_full_descriptions">
        <item>Full increment is given at start of each move</item>
        <item>Clock start is delayed</item>
    </string-array>

    <string-array name="delay_type_descriptions">
        <item>Fischer</item>
        <item>Bronstein</item>
    </string-array>

    <string-array name="delay_type_values">
        <item>FISCHER</item>
        <item>BRONSTEIN</item>
    </string-array>

    <string name="allow_negative_time_preference">Allow clocks to go negative.</string>

    <string name="display">Display</string>
    <string name="display_options_preference_description">Display and Sound Preferences</string>
    <string name="screen_dim_preference">Allow screen to dim</string>
    <string name="show_move_count_preference">Show move counter</string>
    <string name="white_on_left_preference">White button on left</string>
    <string name="audible_notification_preference_bell">Play sound when clock runs out.</string>
    <string name="audible_notification_preference_click">Play sound when pressing buttons.</string>

    <string name="hourglass_time_preference_description">Hourglass</string>
    <string name="advanced_time_preference_description">Tournament</string>
    <string name="summary_advanced_time_preference_description">Set tournament time control options.</string>
    <string name="select_time_control_type_preference">Select Type</string>
    <string name="time_control">Time Control</string>

    <string-array name="timecontrol_type_descriptions">
        <item>Tournament time control (FIDE)</item>
        <item>Personal time control (CUSTOM)</item>
    </string-array>

    <string-array name="timecontrol_type_values">
        <item>FIDE</item>
        <item>CUSTOM</item>
    </string-array>

    <string name="fide_minutes1_title">Minutes for first N moves.</string>
    <string name="fide_minutes1_title_part1">Minutes for first</string>
    <string name="fide_minutes1_title_part2">moves.</string>
    <string name="fide_minutes1_dialogtitle">Please enter number of minutes</string>

    <string name="fide_n_moves_title">Number of moves for first phase.</string>
    <string name="fide_n_moves_dialogtitle">Please enter number of moves.</string>

    <string name="fide_minutes2_title">Extra minutes for second phase.</string>
    <string name="fide_minutes2_dialogtitle">Please enter number of minutes</string>


    <string name="move_times">Move Times</string>
    <string name="move_counter_text">Move</string>
    <string name="about">About</string>
    <string name="about_dialog">To report bugs or view source code, visit "https://github.com/johnwilde/AndroidChessClock"</string>
    <string name="pause_dialog">Paused</string>
    <string name="pause_toast">Paused. Press to resume.</string>
    <string name="_0">0</string>
    <string name="add_ten_seconds">Add Ten Seconds</string>
    <string name="subtract_ten_seconds">Subtract Ten Seconds</string>
    <string name="white_button">White Button</string>
    <string name="black_button">Black Button</string>

    <string name="tap_other_button_resume">Tap other button to resume</string>
    <string name="tap_other_button_start">Tap other button to start.</string>
    <string name="white_lost">White Lost</string>
    <string name="black_lost">Black Lost</string>
    <string name="new_game">New game</string>
    <string name="show_time_gap">Show time gap</string>
    <string name="moves_remaining">Moves Remaining:</string>
    <string name="move">Move:</string>
    <string name="use_bonus_time">Bonus time per move</string>
    <string name="seconds">Seconds</string>
    <string name="tournament_text_delay">%1$s (%2$d) %3$s %4$s</string>
    <string name="tournament_text_no_delay">%1$s (%2$d) %3$s</string>
    <string name="basic_text_delay">%1$s %2$s</string>
    <string name="hourglass_info">While one clock is counting down the other clock is increasing</string>
    <string name="phase_one_min">Phase 1</string>
    <string name="moves">Moves</string>
    <string name="phase_two_min">Phase 2</string>
    <string name="sound">Sound</string>
    <string name="buzzer">Buzzer</string>
    <string name="button_click">Button click</string>
    <string name="negative_time">Negative time</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
</resources>