<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/timePickerRowLayout"
              android:orientation="horizontal"
              android:layout_gravity="center_horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="8dip"
              android:paddingEnd="8dip">

    <!-- hour -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hour_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_gravity="center"
            />

        <NumberPicker
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/picker_top_margin"
            android:layout_marginBottom="@dimen/picker_bottom_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </LinearLayout>

    <!-- minute -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_gravity="center"
            />

        <NumberPicker
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/picker_top_margin"
            android:layout_marginBottom="@dimen/picker_bottom_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </LinearLayout>

    <!-- second -->
    <LinearLayout
        android:id="@+id/seconds_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:layout_gravity="center"
            />

        <NumberPicker
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/picker_top_margin"
            android:layout_marginBottom="@dimen/picker_bottom_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </LinearLayout>

    <!-- moves (for tournament) -->
    <LinearLayout
        android:id="@+id/moves_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:layout_gravity="center"
            />

        <NumberPicker
            android:id="@+id/phase1_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/picker_top_margin"
            android:layout_marginBottom="@dimen/picker_bottom_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </LinearLayout>
</LinearLayout>
